--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "liri"
   ],
   "author": "Kevin Jendreas",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "request": "^2.81.0",
+    "spotify": "^0.3.0",
+    "twitter": "^1.7.0"
+  }
 }
